--- a/1_Anaconda/11_Anaconda.ipynb
+++ b/1_Anaconda/11_Anaconda.ipynb
@@ -8,7 +8,7 @@
     "<div style=\"font-size: 1em; margin: 1em 1em 1em 0; border: 1px solid #86989B; background-color: #f7f7f7; padding: 0;\">\n",
     "<span style='color:Black'>\n",
     "<div class=\"alert alert-info\">\n",
-    "<img align=\"left\"  src='img/imgintro.png'  width='10%'><img align=\"right\" src='./Img/ImgIntro.png'  width='10%'>\n",
+    "<img align=\"left\"  src='img/imgintro.png'  width='10%'><img align=\"right\" src='img/imgintro.png'  width='10%'>\n",
     "    <h1 align=\"center\"> Introduction </h1> \n",
     "    <h3 align=\"center\"> International Graduate School of Artificial Intelligence - YunTech </h3>\n",
     "    <h5 align=\"center\">  </h5>\n",
@@ -24,7 +24,7 @@
    "source": [
     "# <span style='color:Black'>**Prerequirements**</span>\n",
     "\n",
-    "<img src='Img/ImgFoundation.png'  width='30%'>\n",
+    "<img src='img/imgFoundation.png'  width='30%'>\n",
     "\n",
     "\n",
     "You can find some useful resources here: https://aman.ai/primers/math/#derivative-2-function-with-variable-base-and-variable-exponent"
@@ -35,19 +35,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <span style='color:green'>**Objectives** <img align=\"right\" src='Img/ImgObj.png'  width='10%'>\n",
+    "# <span style='color:green'>**Objectives** <img align=\"right\" src='img/imgObj.png'  width='10%'>\n",
     "\n",
-    "<img src='Img/Icon2.png'  width='1%'> Participants will be able to **set up their Python environment** and work on data science and machine learning projects. <br>\n",
+    "<img src='img/icon2.png'  width='1%'> Participants will be able to **set up their Python environment** and work on data science and machine learning projects. <br>\n",
     "\n",
-    "<img src='Img/Icon2.png'  width='1%'> Participants will **understand basic Python syntax** and be able to **manipulate and visualize data**. <br>\n",
+    "<img src='img/icon2.png'  width='1%'> Participants will **understand basic Python syntax** and be able to **manipulate and visualize data**. <br>\n",
     "\n",
-    "<img src='Img/Icon2.png'  width='1%'> Participants will learn **data preprocessing** and **feature extraction techniques** for machine learning. <br> \n",
+    "<img src='img/icon2.png'  width='1%'> Participants will learn **data preprocessing** and **feature extraction techniques** for machine learning. <br> \n",
     "\n",
-    "<img src='Img/Icon2.png'  width='1%'> Participants will **understand different types of machine learning** and be able to **build and evaluate models**. <br>\n",
+    "<img src='img/icon2.png'  width='1%'> Participants will **understand different types of machine learning** and be able to **build and evaluate models**. <br>\n",
     "\n",
-    "<img src='Img/Icon2.png'  width='1%'> Participants will learn **advanced machine learning topics** such as *model evaluation* and *ensemble methods*. <br>\n",
+    "<img src='img/icon2.png'  width='1%'> Participants will learn **advanced machine learning topics** such as *model evaluation* and *ensemble methods*. <br>\n",
     "\n",
-    "<img src='Img/Icon2.png'  width='1%'> Participants will be able to **propose and develop AI applications** using Python. <br>\n",
+    "<img src='img/icon2.png'  width='1%'> Participants will be able to **propose and develop AI applications** using Python. <br>\n",
     "\n",
     "</span>\n"
    ]
