--- a/1_Anaconda/11_Anaconda.ipynb
+++ b/1_Anaconda/11_Anaconda.ipynb
@@ -24,7 +24,7 @@
    "source": [
     "# <span style='color:Black'>**Prerequirements**</span>\n",
     "\n",
-    "<img src='img/imgFoundation.png'  width='30%'>\n",
+    "<img src='img/imgfoundation.png'  width='30%'>\n",
     "\n",
     "\n",
     "You can find some useful resources here: https://aman.ai/primers/math/#derivative-2-function-with-variable-base-and-variable-exponent"
@@ -35,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <span style='color:green'>**Objectives** <img align=\"right\" src='img/imgObj.png'  width='10%'>\n",
+    "# <span style='color:green'>**Objectives** <img align=\"right\" src='img/imgobj.png'  width='10%'>\n",
     "\n",
     "<img src='img/icon2.png'  width='1%'> Participants will be able to **set up their Python environment** and work on data science and machine learning projects. <br>\n",
     "\n",
@@ -73,14 +73,14 @@
    "metadata": {},
    "source": [
     "<div align=\"center\">\n",
-    "<img src='Img/IMgAnaLogo.svg'  width='25%'>\n",
+    "<img src='img/imganaLogo.svg'  width='25%'>\n",
     "</div>\n",
     "\n",
-    "<img src='Img/Icon1.png'  width='1.2%'> <span style='color:Black'>**What is Anaconda?**</span>                              \n",
+    "<img src='img/icon1.png'  width='1.2%'> <span style='color:Black'>**What is Anaconda?**</span>                              \n",
     "\n",
-    "<img src='Img/Icon2.png'  width='1%'> The open‐source Anaconda is the easiest way to perform Python/R data science and machine learning on Linux, Windows, and Mac OS X. With over 19 million users worldwide. <br>\n",
+    "<img src='img/icon2.png'  width='1%'> The open‐source Anaconda is the easiest way to perform Python/R data science and machine learning on Linux, Windows, and Mac OS X. With over 19 million users worldwide. <br>\n",
     "\n",
-    "<img src='Img/Icon2.png'  width='1%'> It is the industry standard for developing, testing, and training on a single machine, enabling individual data scientists to: <br>\n",
+    "<img src='img/icon2.png'  width='1%'> It is the industry standard for developing, testing, and training on a single machine, enabling individual data scientists to: <br>\n",
     "\n",
     "* Quickly download 7,500+ Python data science packages\n",
     "\n",
@@ -100,14 +100,14 @@
    "source": [
     "\n",
     "\n",
-    "<img src='Img/Icon1.png'  width='1.2%'> <span style='color:Black'>**Anaconda Installation**</span>                              \n",
+    "<img src='img/icon1.png'  width='1.2%'> <span style='color:Black'>**Anaconda Installation**</span>                              \n",
     "\n",
-    "<img src='Img/Icon2.png'  width='1%'> Please follow the instruction here to install the Anaconda <br>\n",
+    "<img src='img/icon2.png'  width='1%'> Please follow the instruction here to install the Anaconda <br>\n",
     "* Link: https://www.anaconda.com/distribution/#download‐section\n",
     "\n",
     "<h3 style=\"text-align: center;color: Darkgreen\">The steps for downloading Anaconda</h3>\n",
     "<div align=\"center\">\n",
-    "<img src='Img/ImgAna3.png'  width='60%'>\n",
+    "<img src='img/imgAna3.png'  width='60%'>\n",
     "</div>\n",
     "\n",
     "<br>\n",
@@ -115,7 +115,7 @@
     "<h3 style=\"text-align: center;color: Darkgreen\">The steps for installing Anaconda</h3>\n",
     "\n",
     "<div align=\"center\">\n",
-    "<img src='Img/ImgAna4.png'  width='60%'>\n",
+    "<img src='img/imgAna4.png'  width='60%'>\n",
     "\n",
     "<span style='color:Red'> <br> NOTE: Please ensure that you turn on the \"Add Anaconda3 to my PATH environment variable\" option in the last step. </span>\n",
     "</div>\n",
@@ -128,33 +128,33 @@
    "metadata": {},
    "source": [
     "\n",
-    "<img src='Img/Icon4.png'  width='1.2%'> <span style='color:Black'>**What is Jupyter Notebook?**</span>                              \n",
+    "<img src='img/icon4.png'  width='1.2%'> <span style='color:Black'>**What is Jupyter Notebook?**</span>                              \n",
     "\n",
-    "<img src='Img/Icon3.png'  width='1%'> The Jupyter Notebook is an open‐source web application that allows you to create and share documents that contain live code, equations, visualizations and narrative text. <br>\n",
+    "<img src='img/icon3.png'  width='1%'> The Jupyter Notebook is an open‐source web application that allows you to create and share documents that contain live code, equations, visualizations and narrative text. <br>\n",
     "\n",
-    "<img src='Img/Icon3.png'  width='1%'> It includes: data cleaning and transformation, numerical simulation, statistical modeling, data visualization, machine learning, and much more. <br>\n",
+    "<img src='img/icon3.png'  width='1%'> It includes: data cleaning and transformation, numerical simulation, statistical modeling, data visualization, machine learning, and much more. <br>\n",
     "\n",
-    "<img src='Img/Icon3.png'  width='1%'> Jupyter Notebook is included in the Anaconda. <br>\n",
+    "<img src='img/icon3.png'  width='1%'> Jupyter Notebook is included in the Anaconda. <br>\n",
     "\n",
     "<h3 style=\"text-align: center;color: Darkgreen\">Step 1: Select Jupyter Notebook</h3>\n",
     "<div align=\"center\">\n",
-    "<img src='Img/ImgJup.png'  width='50%'>\n",
+    "<img src='img/imgjup.png'  width='50%'>\n",
     "\n",
     "<h3 style=\"text-align: center;color: Darkgreen\">Step 2: Select the path, then under the button “New”, choose “Python 3” to open a new python file</h3>\n",
     "<div align=\"center\">\n",
-    "<img src='Img/ImgJup1.png'  width='50%'>\n",
+    "<img src='img/imgjup1.png'  width='50%'>\n",
     "\n",
     "<h3 style=\"text-align: center;color: Darkgreen\">Step 3: Type the code into the input box on Jupyter</h3>\n",
     "\n",
     "<div align=\"center\">\n",
-    "<img src='Img/ImgJup2.png'  width='50%'>\n",
+    "<img src='img/imgjup2.png'  width='50%'>\n",
     "</div>\n",
     "\n",
     "\n",
-    "<img src='Img/Icon4.png'  width='1.2%'> <span style='color:Black'>**Basic Operation on Jupyter Notebook**</span>     \n",
+    "<img src='img/icon4.png'  width='1.2%'> <span style='color:Black'>**Basic Operation on Jupyter Notebook**</span>     \n",
     "\n",
     "<div align=\"center\">\n",
-    "<img src='Img/ImgJup2.png'  width='50%'>\n",
+    "<img src='img/imgjup2.png'  width='50%'>\n",
     "</div>\n",
     "\n",
     "* **Run:** The output will be shown in the blank area right below the input box.\n",
