--- a/1_Anaconda/11_Anaconda.ipynb
+++ b/1_Anaconda/11_Anaconda.ipynb
@@ -107,7 +107,7 @@
     "\n",
     "<h3 style=\"text-align: center;color: Darkgreen\">The steps for downloading Anaconda</h3>\n",
     "<div align=\"center\">\n",
-    "<img src='img/imgAna3.png'  width='60%'>\n",
+    "<img src='img/imgana3.png'  width='60%'>\n",
     "</div>\n",
     "\n",
     "<br>\n",
@@ -115,7 +115,7 @@
     "<h3 style=\"text-align: center;color: Darkgreen\">The steps for installing Anaconda</h3>\n",
     "\n",
     "<div align=\"center\">\n",
-    "<img src='img/imgAna4.png'  width='60%'>\n",
+    "<img src='img/imgana4.png'  width='60%'>\n",
     "\n",
     "<span style='color:Red'> <br> NOTE: Please ensure that you turn on the \"Add Anaconda3 to my PATH environment variable\" option in the last step. </span>\n",
     "</div>\n",
