--- a/1_Anaconda/11_Anaconda.ipynb
+++ b/1_Anaconda/11_Anaconda.ipynb
@@ -73,7 +73,7 @@
    "metadata": {},
    "source": [
     "<div align=\"center\">\n",
-    "<img src='img/imganaLogo.svg'  width='25%'>\n",
+    "<img src='img/imganalogo.svg'  width='25%'>\n",
     "</div>\n",
     "\n",
     "<img src='img/icon1.png'  width='1.2%'> <span style='color:Black'>**What is Anaconda?**</span>                              \n",
