--- a/2_Python Tutorial/21_Python Basics.ipynb
+++ b/2_Python Tutorial/21_Python Basics.ipynb
@@ -1823,7 +1823,7 @@
     "\n",
     "### **Identity Operators**\n",
     "\n",
-    "<img src='imgs/IdenOp.jpg'  width='50%'>\n",
+    "<img src='imgs/idenop.jpg'  width='50%'>\n",
     "\n",
     "</div>"
    ]
