--- a/2_Python Tutorial/22_Numpy.ipynb
+++ b/2_Python Tutorial/22_Numpy.ipynb
@@ -1203,7 +1203,7 @@
    "metadata": {},
    "source": [
     "<div align=\"center\">\n",
-    "<img src='imgs/Numpy_filter.png'  width='30%'>\n",
+    "<img src='imgs/numpy_filter.png'  width='30%'>\n",
     "</div>"
    ]
   },
