--- a/2_Python Tutorial/23_Pandas.ipynb
+++ b/2_Python Tutorial/23_Pandas.ipynb
@@ -10,8 +10,8 @@
     "<span style='color:Black'>\n",
     "<div class=\"alert alert-info\">\n",
     "<img align=\"left\" src='imgs/imgpandaslogo.svg'  width='10%'><img align=\"right\" src='imgs/imgpandaslogo.svg'  width='10%'>\n",
-    "    <h1 align=\"center\", style='color:white'>Pandas</h1> \n",
-    "    <h3 align=\"center\" style='color:white'> International Graduate School of Artificial Intelligence - YunTech </h3>\n",
+    "    <h1 align=\"center\", style='color:black'>Pandas</h1> \n",
+    "    <h3 align=\"center\" style='color:black'> International Graduate School of Artificial Intelligence - YunTech </h3>\n",
     "    <h5 align=\"center\">  </h5>\n",
     "</div>\n",
     "</span>\n",
@@ -24,7 +24,7 @@
    "id": "3ea20fa1",
    "metadata": {},
    "source": [
-    "#### Ref: <br> https://pandas.pydata.org/docs/"
+    "#### Ref: https://pandas.pydata.org/docs/"
    ]
   },
   {
