--- a/2_Python Tutorial/21_Python Basics.ipynb
+++ b/2_Python Tutorial/21_Python Basics.ipynb
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Ref: <br> - https://docs.python.org/3/tutorial/index.html"
+    "#### Ref: https://docs.python.org/3/tutorial/index.html"
    ]
   },
   {
