--- a/2_Python Tutorial/22_Numpy.ipynb
+++ b/2_Python Tutorial/22_Numpy.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Ref: <br> https://numpy.org/doc/1.24/"
+    "#### Ref: https://numpy.org/doc/1.24/"
    ]
   },
   {
