--- a/2_Python Tutorial/24_MatPlotlib.ipynb
+++ b/2_Python Tutorial/24_MatPlotlib.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Ref: <br> - https://matplotlib.org/"
+    "#### Ref: https://matplotlib.org/"
    ]
   },
   {
