--- a/5_Classification/52_KNN/5202_KNN GridSearchCV.ipynb
+++ b/5_Classification/52_KNN/5202_KNN GridSearchCV.ipynb
@@ -986,7 +986,7 @@
    "source": [
     "<div style=\"font-size: 1em; margin: 1em 1em 1em 1em; border: 1px solid #86989B; background-color: #8fffff;padding: 1em 1em 1em 1em; \">\n",
     "<div align=\"center\">\n",
-    "<img src='Imgs/icon5.png'  width='10%'>\n",
+    "<img src='imgs/icon5.png'  width='10%'>\n",
     "\n",
     "<h2 style=\"text-align: center;color: Darkgreen\"> Explainable AI</h2>\n",
     "\n",
