--- a/5_Classification/52_KNN/5201_KNN.ipynb
+++ b/5_Classification/52_KNN/5201_KNN.ipynb
@@ -132,7 +132,7 @@
     "Eucliden distance: <span style='color:Blue'>blue line</span> <br>\n",
     "Manhatten distance: <span style='color:Orange'>orange</span>, <span style='color:Green'>green</span> or <span style='color:Yellow'>yellow</span>\n",
     "\n",
-    "<img src='./imgs/distance.JPG'  width='30%'>"
+    "<img src='./imgs/distance.jpg'  width='30%'>"
    ]
   },
   {
@@ -720,7 +720,7 @@
    "source": [
     "<div style=\"font-size: 1em; margin: 1em 1em 1em 1em; border: 1px solid #86989B; background-color: #8fffff;padding: 1em 1em 1em 1em; \">\n",
     "<div align=\"center\">\n",
-    "<img src='Imgs/icon5.png'  width='10%'>\n",
+    "<img src='imgs/icon5.png'  width='10%'>\n",
     "\n",
     "<h2 style=\"text-align: center;color: Darkgreen\"> Grid Search</h2>\n",
     "\n",
